--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,10 @@
     },
     "routes": [
         {
+            "src": "/(css|js|images|build|assets|favicon.ico|robots.txt)(.*)",
+            "dest": "/public/$1$2"
+        },
+        {
             "src": "/(.*)",
             "dest": "/api/index.php"
         }
@@ -22,6 +26,7 @@
         "VIEW_COMPILED_PATH": "/tmp",
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
-        "SESSION_DRIVER": "cookie"
+        "SESSION_DRIVER": "cookie",
+        "ASSET_URL": "https://${VERCEL_URL}"
     }
 }
