--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
     "version": 2,
     "framework": null,
     "functions": {
-        "api/index.php": { "runtime": "vercel-php@0.7.1" }
+        "api/index.php": { "runtime": "vercel-php@0.7.1" },
+        "api/migrate.php": { "runtime": "vercel-php@0.7.1" }
     },
     "routes": [
         {
@@ -12,6 +13,10 @@
         {
             "src": "/(favicon\\.ico|robots\\.txt)",
             "dest": "/public/$1"
+        },
+        {
+            "src": "/migrate-db",
+            "dest": "/api/migrate.php"
         },
         {
             "src": "/(.*)",
